# sift-search

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/media/: README.md
src/sift/: __init__.py  bench.py  cli.py  config.py  db.py  download.py  engine.py  indexer.py  kde_install.py  krunner.py  maint.py  open_hit.py  search.py  service_install.py
src/sift/extractors/: __init__.py  chunking.py  docx.py  html.py  pdf.py  text.py
src/sift/gui/: app.py  settings.py
src/sift/models/: asr.py  image_embed.py  ocr.py  pins.py  text_embed.py
tests/: test_asr.py  test_bench.py  test_chunking.py  test_config_maint.py  test_db.py  test_frontends.py  test_fusion.py  test_image.py  test_indexer.py  test_ocr.py  test_pins.py  test_search.py  test_semantic.py  test_version.py
